<resources>
    <string name="app_name">Adherence</string>

    <string name="title_section1">Today</string>
    <string name="title_section2">Medication</string>
    <string name="title_section3">Calendar</string>
    <string name="title_section4">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">logout</string>
    <string name="update">update</string>
    <string name="calendar">calendar</string>
    <string name="bluetooth">bluetooth</string>
    <string name="action_settings">Settings</string>
    <string name="version_heading">Adherence Pill </string>
    <string name="website_docs_display">http://adherencepillproject.parseapp.com/login.html</string>

    <string name="prev">prev</string>
    <string name="next">next</string>


    <string name="progress_title">Connecting...</string>
    <string name="progress_message">Connecting to BLE device</string>

    <string name="disconnect_dialog_title">Disconnecting...</string>
    <string name="disconnect_dialog_message">Disconnecting from BLE device</string>

    <string name="con_err_message">Failed to connect to device</string>
    <string name="con_timeout_message">Connection timed out</string>
    <string name="discon_timeout_message">Disconnect timed out</string>
    <string name="discon_err_message">Failed to disconnect from device</string>
    <string name="device_error_message">Error communicating with device! Please reconnect and try again.</string>
    <string name="error_service_disc">Failed to discover TruConnect services</string>
    <string name="error_configuration">Failed to configure device for communication</string>
    <string name="error_connection_lost">Connection to device lost!</string>

    <string name="about">About</string>
    <string name="about_link">https://ack.me</string>
    <string name="title_activity_device_info">Device Information</string>

    <string name="enable_ble_msg">Bluetooth is disabled! Please enable it from the device settings menu.</string>
    <string name="char_read_fail_msg">Failed to read characteristic</string>

    <string name="scan_failed_title">Scan Failed</string>
    <string name="scan_failed_msg_internal_error">An internal error occurred, please try again</string>
    <string name="scan_failed_msg_unsupported">This device reported that it does not support BLE scanning</string>
    <string name="scan_failed_msg_reg_failed">The application cannot be registered</string>

    <string name="ble_unsupported_title">Bluetooth Error</string>
    <string name="ble_unsupported_msg">This device does not support bluetooth!</string>

    <string name="init_fail_title">Initialisation Error</string>
    <string name="init_fail_msg">Failed to initialise BLE. If your device supports BLE, please ensure it is enabled.</string>

    <string name="send_data_hint">Enter data to send</string>
    <string name="send_data_button_text">Send</string>
    <string name="receive_data_hint">Received data goes here</string>

    <string name="update_button_text">Read Values</string>
    <string name="gpio_value_title">GPIO:</string>
    <string name="adc_value_title">ADC:</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>

    <string name="service_name">TruConnect service</string>

    <string name="arg_section_number">section_number</string>
    <string name="arg_section_token">session_token</string>

    <string name="parseURL">http://ec2-13-59-253-73.us-east-2.compute.amazonaws.com:5000</string>

    <string name="settings_remind_time_init">1hr00min</string>
    <string name="settings_interval_time_init">30min</string>
    <string name="settings_max_remind_times_init">3</string>

    <string name="settings_morning_time_init">7:00</string>
    <string name="settings_afternoon_time_init">14:00</string>
    <string name="settings_evening_time_init">19:00</string>
    <string name="settings_bedtime_time_init">21:00</string>
    <string name="title_activity_settings">Settings</string>
    
    <string name="triple_numberpicker_hour">Hour</string>
    <string name="triple_numberpicker_minute">Minute</string>

    <!-- Strings related to Settings -->

    <string name="pref_headers_notification_title">Notification</string>
    <string name="pref_headers_notification_summary">Notification Setting</string>

    <!-- Settings for Notifications -->
    <string name="pref_notification_category_notifications">Notifications</string>
    <string name="pref_notification_category_notifi_switch_title">Notification</string>
    <string name="pref_notification_category_notifi_switch_key">notify_switch</string>
    <string name="pref_notification_category_vibrate_switch_title">Vibration</string>
    <string name="pref_notification_category_vibrate_switch_key">vibrate_switch</string>
    <string name="pref_notification_category_sound_switch_title">Sound</string>
    <string name="pref_notification_category_sound_switch_key">sound_switch</string>

    <string name="pref_notification_category_after_key">notifi_after</string>
    <string name="pref_notification_category_interval_key">notifi_interval</string>
    <string name="pref_notification_category_times_key">notifi_times</string>

    <string name="pref_notification_category_period">Period</string>
    <!--old version for triple timepicker version-->
    <string name="pref_notification_category_morning_key">pref_period_morning</string>
    <string name="pref_notification_category_afternoon_key">pref_period_afternoon</string>
    <string name="pref_notification_category_night_key">pref_period_night</string>
    <string name="pref_notification_category_bedtime_key">pref_period_bedtime</string>
    <!--new version for seekBar preference-->
    <string name="pref_morning_seekBar_key">pref_morning_seekbar</string>
    <string name="pref_afternoon_seekBar_key">pref_afternoon_seekbar</string>
    <string name="pref_evening_seekBar_key">pref_evening_seekbar</string>
    <string name="pref_bedtime_seekBar_key">pref_bedtime_seekbar</string>

    <!--Medication Fragment-->
    <string name="med_fragment_storage_path">/Adherence/savedPictures</string>

    <!--Today Frament-->
    <string name="today_fragment_storage_path">/Adherence/savedPictures</string>
</resources>