<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:attr_seekBar="http://schemas.android.com/apk/res/com.adherence.adherence">
    <PreferenceCategory
        android:title="@string/pref_notification_category_notifications">

        <SwitchPreference
            android:title="@string/pref_notification_category_notifi_switch_title"
            android:key="@string/pref_notification_category_notifi_switch_key"
            android:persistent="true"
            android:summaryOn="On"
            android:summaryOff="Off"
            />
        <SwitchPreference
            android:title="@string/pref_notification_category_vibrate_switch_title"
            android:key="@string/pref_notification_category_vibrate_switch_key"
            android:persistent="true"
            android:summaryOn="On"
            android:summaryOff="Off"
            />
        <SwitchPreference
            android:title="@string/pref_notification_category_sound_switch_title"
            android:key="@string/pref_notification_category_sound_switch_key"
            android:persistent="true"
            android:summaryOn="On"
            android:summaryOff="Off"
            />

        <ListPreference
            android:title="Notification After"
            android:key="@string/pref_notification_category_after_key"
            android:dialogTitle="Select Time"
            android:defaultValue="10"
            android:persistent="true"
            android:summary="%s"
            android:entryValues="@array/after_notification_time_values"
            android:entries="@array/after_notification_time"
            />
        <ListPreference
            android:title="Notification Interval"
            android:key="@string/pref_notification_category_interval_key"
            android:dialogTitle="Select Time"
            android:defaultValue="15"
            android:persistent="true"
            android:summary="%s"
            android:entryValues="@array/interval_notification_time_values"
            android:entries="@array/interval_notification_time"
            />
        <ListPreference
            android:title="Maximum Notification Times"
            android:key="@string/pref_notification_category_times_key"
            android:defaultValue="1"
            android:dialogTitle="Select Times"
            android:persistent="true"
            android:summary="%s"
            android:entryValues="@array/max_notification_times"
            android:entries="@array/max_notification_times"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_notification_category_period">

        <com.adherence.adherence.SeekBarPreference
            android:title="Morning"
            android:key="@string/pref_morning_seekBar_key"
            android:persistent="true"
            attr_seekBar:startTime="@integer/pref_morning_start_hour"
            attr_seekBar:endTime="@integer/pref_morning_end_hour"
            attr_seekBar:interval="@integer/pref_period_interval"
            />
        <com.adherence.adherence.SeekBarPreference
            android:title="Afternoon"
            android:key="@string/pref_afternoon_seekBar_key"
            android:persistent="true"
            attr_seekBar:startTime="@integer/pref_afternoon_start_hour"
            attr_seekBar:endTime="@integer/pref_afternoon_end_hour"
            attr_seekBar:interval="@integer/pref_period_interval"
            />
        <com.adherence.adherence.SeekBarPreference
            android:title="Evening"
            android:key="@string/pref_evening_seekBar_key"
            android:persistent="true"
            attr_seekBar:startTime="@integer/pref_evening_start_hour"
            attr_seekBar:endTime="@integer/pref_evening_end_hour"
            attr_seekBar:interval="@integer/pref_period_interval"
            />
        <com.adherence.adherence.SeekBarPreference
            android:title="Bedtime"
            android:key="@string/pref_bedtime_seekBar_key"
            android:persistent="true"
            attr_seekBar:startTime="@integer/pref_bedtime_start_hour"
            attr_seekBar:endTime="@integer/pref_bedtime_end_hour"
            attr_seekBar:interval="@integer/pref_period_interval"
            />
    </PreferenceCategory>
</PreferenceScreen>